name:           human-hash
version:        1.0
license:        BSD3
author:         Chris Heller
maintainer:     Chris Heller <hellertime@gmail.com>
synopsis:       Human readable hash for Haskell.
description:
    Implements a variant of human readable hash.
    Inspired by <https://github.com/zacharyvoase/humanhash>
    .
category:       Data, Digest
stability:      provisional
build-type:     Simple
cabal-version:  >=1.10

library
    hs-source-dirs:     src
    default-language:   Haskell2010
    build-depends:      base >=4.7 && <5.0

    exposed-modules:
        Data.Digest.Human

source-repositoy head
    type:       git
    location:   https://github.com/hellertime/human-hash.git
